# stm32f4discovery_rust

./: Cargo.toml  README.md  cargo-dbuild  cargo-flash  cargo-mybuild  cargo-rbuild  memory.x  program.jlink  stm32f4-rust  stm32f4-rust.hex  stm32f4.cfg
.cargo/: config
src/: button.rs  constants.rs  hb.rs  heartbeat.rs  lis3dsh.rs  main.rs  util.rs
src/spi_drv/: mod.rs  spi1.rs
