[package]
name = "stm32f4-rust"
version = "0.1.0"
authors = ["someguy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "0.1.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-halt = "0.2"
stm32f4xx-hal = { version = "0.8", features = ["rt", "stm32f407"] }
