[package]
name = "stm32f4-rust"
version = "0.1.0"
authors = ["someguy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# embedded-hal = "0.2"
# nb = "0.1.2"
# cortex-m-rt = "0.6"
cortex-m = "0.6"
# cortex-m-rtic-macros = { path = "macros", version = "0.6" }
rtic-core = "0.3"
heapless = "0.5"
bare-metal = "1.0"
stm32f4xx-hal = { version = "0.8", features = ["rt", "stm32f407"] }
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
cortex-m-rtic = "0.5"

[dev-dependencies]
# panic-halt = "0.2"

[profile.release]
# "s" or "z"
codegen-units = 1
debug = true
debug-assertions = true
opt-level = "s"
